# inference_engine_js

./: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
include/: blob.h  cnn_layer.h  cnn_network.h  common.h  common.hpp  core.h  data.h  executable_network.h  ie_core.h  ie_exec_network.h  ie_input_info.h  ie_layer.h  ie_network.h  infer_request.h  input_info.h
lib/: index.d.ts  inference_engine.js
lib/inference_engine_helpers/: classification.ts  common.ts  index.ts  object_detection.ts
lib/src/: index.js
lib/src/post_processing/: classification.js  object_detection.js
lib/src/pre_processing/: index.js
lib/typings/: cnn_network.d.ts  core.d.ts  data.d.ts  executable_network.d.ts  infer_request.d.ts  input_blob.d.ts  input_info.d.ts  output_info.d.ts  post_processing.d.ts  pre_processing.d.ts
samples/: async_hello_classification.ts  classification_async.js  common.ts  hello_classification.js  hello_classification.ts  hello_query_device.js  hello_query_device.ts  inference.js  network.js  network_information.js  network_information.ts  object_detection_ssd.ts
src/: blob.cpp  cnn_layer.cpp  cnn_network.cpp  common.cpp  core.cpp  data.cpp  executable_network.cpp  ie_core.cpp  ie_exec_network.cpp  ie_input_info.cpp  ie_layer.cpp  ie_network.cpp  infer_request.cpp  init.cpp  input_info.cpp
